Move kernel crate into a subfolder

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 
 [build]
-target = "aarch64-unknown-none-softfloat"
+# target = "aarch64-unknown-none-softfloat"
 
 # [unstable]
 # unstable-options = true
