Minor vmem code cleanup
- Moved panic = "abort" into profile definitions in workspace Cargo.toml
- Marked cache invalidation functions unsafe
- Made map_device/map_physical work with raw pointers to make rustc
  stop complaining about mutable statics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ opt-level = 2
 strip = false
 incremental = false
 debug = 2
+panic = "abort"
 
 [profile.dev]
 incremental = false
+panic = "abort"
