--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/device-tree",
     "crates/elf",
     "crates/endian",
+    "crates/init",
     "crates/kernel",
     "crates/lz4",
 ]
