--- a/crates/filesystem/Cargo.toml
+++ b/crates/filesystem/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bytemuck = "1.21.0"
+bytemuck = { version = "1.21.0", features = ["derive"] }
 
 [features]
 std = []
