--- a/crates/endian/Cargo.toml
+++ b/crates/endian/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "device-tree"
+name = "endian"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.19.0", default-features = false }
-endian = { path = "../endian" }
