Reorganize device-tree module, use it to resolve device addresses

--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 bitflags = "2.8.0"
 bytemuck = { version = "1.19.0", default-features = false }
 device-tree = { path = "../device-tree" }
+endian = { path = "../endian" }
