--- a/crates/elf/Cargo.toml
+++ b/crates/elf/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = { version = "1.19.0", default-features = false }
 
 [features]
 std = []
