--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,5 @@
-
 [build]
 # target = "aarch64-unknown-none-softfloat"
 
-# [unstable]
-# unstable-options = true
-# build-std = ["std", "panic_abort"]
-# build-std-features = ["panic_immediate_abort"]
+[alias]
+dump-img = ["run", "-p", "elf", "--bin", "dump_img", "--"]
