Read-only Ext2 (#34)
* Basic filesystem boilerplate

* add some structs

* read superblock

* add inode size function

* added some inode code

* added initial read-only FS code

* fixing some superblock/inode bugs

* got basic file reading working!

* finished first fs reading test

* fixed truncation issue

* ran cargo fmt

* making all module members public

* made block size not a constant and used Result type now

* backported statically sized name_characters array

* renamed logical block name

* Fix warnings

* Remove length parameter from read_* methods

* Lazily parse directory entries

* added read logical multiple block functions

* ran cargo fmt

* Fix reading multi-block BGDT

---------

Co-authored-by: Alex Meyer <ameyer@cs.utexas.edu>
Co-authored-by: Sasha Huang <huang@cs.utexas.edu>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/device-tree",
     "crates/elf",
     "crates/endian",
+    "crates/filesystem",
     "crates/init",
     "crates/initfs",
     "crates/kernel",
