Move exec into the kernel

--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -10,4 +10,5 @@ smallbox = { version = "0.8.6", default-features = false }
 
 device-tree = { path = "../device-tree" }
 endian = { path = "../endian" }
+elf = { path = "../elf" }
 initfs = { path = "../initfs"}
