--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/init",
     "crates/initfs",
     "crates/kernel",
+    "crates/libcsud",
     "crates/lz4",
     "crates/ulib",
 ]
