Graphical console in kernel

--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -15,3 +15,4 @@ endian = { path = "../endian" }
 elf = { path = "../elf" }
 filesystem = { path = "../filesystem" }
 initfs = { path = "../initfs"}
+gfx = { path = "../gfx" }
