--- a/crates/ulib/Cargo.toml
+++ b/crates/ulib/Cargo.toml
@@ -3,6 +3,9 @@ name = "ulib"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["lib"]
+
 [dependencies]
 linked_list_allocator = { version = "0.10", optional = true }
 
@@ -12,3 +15,5 @@ runtime = []
 thread = []
 heap-impl = ["linked_list_allocator"]
 test = []
+alloc = []
+newlib-stub = []
