--- a/crates/ulib/Cargo.toml
+++ b/crates/ulib/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+linked_list_allocator = { version = "0.10", optional = true }
 
 [features]
 default = ["runtime"]
 runtime = []
+thread = []
+heap-impl = ["linked_list_allocator"]
 test = []
