--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "crates/console",
     "crates/device-tree",
     "crates/display-client",
     "crates/display-proto",
