--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -15,3 +15,4 @@ endian = { path = "../endian" }
 elf = { path = "../elf" }
 initfs = { path = "../initfs"}
 filesystem = { path = "../filesystem" }
+networking = { path = "../networking"}
