done, need to fix circular dependency to access system_time

--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -12,3 +12,4 @@ device-tree = { path = "../device-tree" }
 endian = { path = "../endian" }
 elf = { path = "../elf" }
 initfs = { path = "../initfs"}
+networking = { path = "../networking"}
