--- a/crates/kernel/Cargo.toml
+++ b/crates/kernel/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 bitflags = "2.8.0"
 bytemuck = { version = "1.19.0", default-features = false }
 smallbox = { version = "0.8.6", default-features = false }
+byteorder = { version = "1.4", default-features = false }
+log = { version = "0.4", default-features = false }
 
 device-tree = { path = "../device-tree" }
 endian = { path = "../endian" }
 elf = { path = "../elf" }
 initfs = { path = "../initfs"}
-networking = { path = "../networking"}
