--- a/crates/console/Cargo.toml
+++ b/crates/console/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bytemuck = "1.21.0"
+bytemuck = { version = "1.19.0", default-features = false }
 unicode-segmentation = "1.12"
 
 display-client = { path = "../display-client" }
