--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "crates/elf",
     "crates/endian",
     "crates/filesystem",
+    "crates/gfx",
     "crates/init",
     "crates/initfs",
     "crates/kernel",
