--- a/crates/display-server/Cargo.toml
+++ b/crates/display-server/Cargo.toml
@@ -8,6 +8,7 @@ bytemuck = { version = "1.19.0", default-features = false }
 linked_list_allocator = "0.10"
 glam = { version = "0.30", default-features = false, features = ["nostd-libm"] }
 thunderdome = { version = "0.6", default-features = false }
+bitflags = "2.8.0"
 
 display-proto = { path = "../display-proto" }
 ulib = { path = "../ulib", features = ["heap-impl"] }
