--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/initfs",
     "crates/kernel",
     "crates/lz4",
+    "crates/paint",
     "crates/shell",
     "crates/ulib",
 ]
