Initial Ext2 R/W pull request (#54)
* Basic filesystem boilerplate

* add some structs

* read superblock

* add inode size function

* added some inode code

* added initial read-only FS code

* fixing some superblock/inode bugs

* got basic file reading working!

* finished first fs reading test

* starting work on writing

* cleaning up and finishing up writing code

* got very basic file writing test working

* creates test image artifact with running test

* file creation is somewhat working?

* working on writing to a file while two handles exist

* added inode_map

* switched writes to inode_map

* making sure superblock and BGD writes are going thru

* rewriting test framework

* implment file creation

* no more copyright issues  🦀

* fixing test filenames

* fixed duplicate test image name bug

* fix dir tree duplicate image name

* some refactoring on doubly indirect writes

* working on phantom fiile bug

* fixed accidentally using reserved inodes

* ok fixed the previously passing test cases again

* add some tests

* added extra fuse-ext2 testing (only works on linux rn)

* reworked some new test cases to use fuse asw

* directory creation is now working

* made single_indirect_read and double_indirect_read tests independent

* rewriting bad indirect writing code

* accounting for deferred writes in reading

* big_file_create_test is passing. trust.

for some reason it works with ext2 fuse but not my fedora linux's ext2 driver (6.12.4-200.fc41.x86_64)

* passing more minimal version of dir_tree test

* fixed dir_tree_test

the horrors forgetting one small multiplication can do

* added mass_file_creation_test

* fixed bug with mass_file_creation

* added dir scanning into test harness

* fixed truncation issue

* fixed ext2 directory entry sizing

* fixed multiply-claimed blocks

* replacing block_allocated_count to account for it having non-data blocks

* reworking block allocated count setting

* now accounting for list blocks in block_allocated_coun

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ kernel.elf
 .gdb_history
 .vscode
 .idea
+.vs
 .DS_Store
 *.tmp.*
-net0.pcap
 *.img
+net0.pcap
 *.dd
 .llvmbox
+/test/generated_tests
